--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
             <p>Desenvolvido por Evanildo.</p>
         </div>
     </footer>
+    
+    <script defer src="/_vercel/insights/script.js"></script>
+    
 </body>
 
 </html>
